Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17281

[C++] Windows reports aggregated L-Cache sizes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 9.0.0
    • 10.0.0
    • C++

    Description

      On Windows 10 Version 10.0.19044 Build 19044 CpuInfo::CacheLevel over reports the L-cache size:
      640K for L1
      10M for L2
      These values are also reported by Windows resource monitor.
      It seems that windows is reporting the total size of cache for each core aggregated as one value. Possibly due to "intel smart cache" cache sharing?

      
      [----------] 1 test from CpuInfo
      [ RUN      ] CpuInfo.Basic
      C:/tmp/arrow-verify-release/apache-arrow-9.0.0/cpp/src/arrow/util/io_util_test.cc(1036): error: Value of: l1 >= 4 * 1024 && l1 <= 512 * 1024
        Actual: false
      Expected: true
      unexpected L1 size: 655360
      [  FAILED  ] CpuInfo.Basic (0 ms)
      [----------] 1 test from CpuInfo (0 ms total)
      

      Attachments

        Issue Links

          Activity

            People

              yibocai Yibo Cai
              assignuser Jacob Wujciak
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m