ARROW-17281: [C++] Fix cache size reporting on Windows (#13813)

Authored-by: Yibo Cai <yibo.cai@arm.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>